tests/snapshots/terminal_app_macos__terminal_app_malformed_explain.snap
---
source: tests/terminal_app_macos.rs
expression: "support::stderr_text(&output)"
---
failed to read terminal configuration: failed to read plist: ExpectedEndOfEventStream { found: String }
