tests/snapshots/terminal_app_macos__terminal_app_non_nerd_font_explain.snap
---
source: tests/terminal_app_macos.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
