tests/snapshots/terminal_app_macos__terminal_app_real_default_explain.snap
---
source: tests/terminal_app_macos.rs
expression: "support::stderr_text(&output)"
---
failed to read terminal configuration: missing font descriptor for profile Clear Dark
