tests/snapshots/terminal_app_macos__terminal_app_real_nerd_font_json.snap
---
source: tests/terminal_app_macos.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/terminal-app-real-nerd-font/Library/Preferences/com.apple.Terminal.plist",
  "detected": true,
  "font": "JetBrainsMonoNF-Regular",
  "profile": "Clear Dark",
  "source": "terminal_config",
  "terminal": "terminal_app"
}
